--- a/GreekMyth/styles/greek.css
+++ b/GreekMyth/styles/greek.css
@@ -94,6 +94,10 @@ header > a {
   font-size: 1.5rem;
 }
 
+header > a:hover {
+  color: #003b80;
+}
+
 main {
   padding: 2rem;
   transition: padding 0.3s ease;
