Added Create Users in API

--- a/GreekMythCMS/styles/users.css
+++ b/GreekMythCMS/styles/users.css
@@ -96,6 +96,11 @@
     }
 }
 
+.form-container > .userForm-create {
+    width: 100%;
+    max-width: fit-content;
+}
+
 /* Styling from the view_user.html */
 .userInfo-container {
     display: flex;
@@ -324,3 +329,27 @@
     }
 }
 
+.data-options {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    padding: 1.5rem;
+    border-radius: 20px;
+    background-color: var(--light-color);
+
+    button {
+        width: fit-content;
+        background-color: var(--button-color);
+        color: var(--light-color);
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+        font-size: 1rem;
+        cursor: pointer;
+
+        &:hover {
+            transition: background-color 0.5s ease-in-out;
+            background-color: var(--button-hover-color);
+            color: var(--dark-color);
+        }
+    }
+}
