--- a/GreekMythCMS/styles/users.css
+++ b/GreekMythCMS/styles/users.css
@@ -67,6 +67,15 @@
             border: 0.2rem solid var(--dark-color);
         }
 
+        textarea {
+            width: 100%;
+            padding: 0.5rem;
+            font-size: 1rem;
+            border-radius: 0.5rem;
+            border: 0.2rem solid var(--dark-color);
+            resize: vertical;
+        }
+
         .edit-options-container {
             display: flex;
             flex-direction: column;
