--- a/GreekMythCMS/styles/table.css
+++ b/GreekMythCMS/styles/table.css
@@ -39,22 +39,42 @@ table {
 
             .edit {
                 background-color: blue;
+
+                &:hover {
+                    background-color: rgb(0, 0, 255, 0.5);
+                }
             }
 
             .view {
                 background-color: green;
+
+                &:hover {
+                    background-color: rgb(0, 255, 0, 0.5);
+                }
             }
 
             .delete {
                 background-color: red;
+
+                &:hover {
+                    background-color: rgb(255, 0, 0, 0.5);
+                }
             }
 
             .enable {
                 background-color: black;
+
+                &:hover {
+                    background-color: rgb(0, 0, 0, 0.5);
+                }
             }
 
             .disable {
                 background-color: gray;
+
+                &:hover {
+                    background-color: rgb(128, 128, 128, 0.5);
+                }
             }
 
             .edit, .view, .delete, .enable, .disable {
